--- a/marathon.yml
+++ b/marathon.yml
@@ -1,7 +1,7 @@
 id: /marathon-lb
 cpus: 0.01
 mem: 128
-instances: 9
+instances: {{count}}
 args: [ 
     "sse",
     "--group=internal",
@@ -28,6 +28,10 @@ constraints:
   -
     - hostname
     - UNIQUE
+  -
+    - {{cluster_key}}
+    - CLUSTER
+    - {{cluster_value}}
 upgradeStrategy:
   minimumHealthCapacity: 0.75
   maximumOverCapacity: 0
