--- a/marathon.yml
+++ b/marathon.yml
@@ -24,6 +24,7 @@ env:
   NC_ID: {{nutcracker_id}}
   NC_KEY: {{nutcracker_key}}
   NC_SERVER: {{nutcracker_server}}
+  ZK_DOMAIN: {{zk_domain}}
 constraints:
   -
     - hostname
