--- a/marathon.yml
+++ b/marathon.yml
@@ -20,6 +20,9 @@ container:
       -
         key: "label"
         value: "APP_BUILD={{version}}"
+      -
+        key: "dns"
+        value: "172.17.0.1"
 env:
   NC_ID: {{nutcracker_id}}
   NC_KEY: {{nutcracker_key}}
