--- a/.travis.yml
+++ b/.travis.yml
@@ -5,4 +5,4 @@ python:
   - "3.4"
   - "3.5"
 script: nosetests
-install: "pip install -r requirements.txt pep8"
+install: "pip install -r requirements.txt"
