--- a/marathon.yml
+++ b/marathon.yml
@@ -1,22 +1,22 @@
-id: /marathon-lb
+id: /{{app_name}}
 cpus: 0.01
 mem: 128
 instances: {{count}}
 args: [ 
     "sse",
-    "--group=internal",
+    "--group={{marathon_group_name}}",
     "--marathon={{marathon_url}}",
     "--auth-credentials={{marathon_creds}}"
     ]
 container:
   docker:
-    image: registry.nutmeg.co.uk:8443/marathon-lb:{{version}}
+    image: registry.nutmeg.co.uk:8443/{{app_name}}:{{version}}
     forcePullImage: true
     network: HOST
     parameters:
       -
         key: "label"
-        value: "APP_NAME=marathon-lb"
+        value: "APP_NAME={{app_name}}"
       -
         key: "label"
         value: "APP_BUILD={{version}}"
