--- a/marathon.yml
+++ b/marathon.yml
@@ -6,7 +6,8 @@ args: [
     "sse",
     "--group={{marathon_group_name}}",
     "--marathon={{marathon_url}}",
-    "--auth-credentials={{marathon_creds}}"
+    "--auth-credentials={{marathon_creds}}",
+    "--syslog-socket=/dev/log"
     ]
 container:
   docker:
@@ -20,6 +21,11 @@ container:
       -
         key: "label"
         value: "APP_BUILD={{version}}"
+  volumes:
+  -
+    containerPath: /dev/log
+    hostPath: /dev/log
+    mode: RW
 env:
   NC_ID: {{nutcracker_id}}
   NC_KEY: {{nutcracker_key}}
