--- a/marathon.yml
+++ b/marathon.yml
@@ -36,6 +36,7 @@ env:
   NC_KEY: {{nutcracker_key}}
   NC_SERVER: {{nutcracker_server}}
   NM_ENV: {{env}}
+  NM_GROUP: {{marathon_group_name}}
 constraints:
   -
     - hostname
